--- a/project_tallywho.html
+++ b/project_tallywho.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>Tally Who - Ben Ikeler</title>
-    <meta charset="utf-8">
+    <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/portfolio.css">
     <link rel="stylesheet" href="./css/project_page.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap">
@@ -58,16 +58,16 @@
                 <div>
                     <div class="projects-text">
                         <p class="section-title">Design</p>
-                        <p>I wanted the visual style to be simple and clean, but still remain playful. Each element should be distinct from one another yet fit together like a finished jigsaw puzzle. I also wanted to attempt to break free from the classic material design we see in every modern app. It's good to have consistency between apps so that users understand a certain design language, but I also think that there is a lot of power in novelty, and that's what I wanted to push here.</p>
-                        <p>It will soon be available for purchase on your app store!</p>
+                        <div class="design-p">
+                            <p>I wanted the visual style to be simple and clean, but still remain playful. Each element should be distinct from one another yet fit together like a finished jigsaw puzzle. I also wanted to attempt to break free from the classic material design we see in every modern app. It's good to have consistency between apps so that users understand a certain design language, but I also think that there is a lot of power in novelty, and that's what I wanted to push here.</p>
+                            <p>It will soon be available for purchase on your app store!</p>
+                        </div>
                     </div>
                 </div>
                 <div class="mobile-img-con">
                     <img class="swell design-img" src="./images/Home_Screen.png" alt="TallyWho Mockup">
                     <img class="swell design-img" src="./images/Countdown_Screen.png" alt="TallyWho Mockup">
                     <img class="swell design-img" src="./images/Dice_Screen.png" alt="TallyWho Mockup">
-                </div>
-                <div class="mobile-img-con">
                     <img class="swell design-img" src="./images/AddPlayer_Screen.png" alt="TallyWho Mockup">
                     <img class="swell design-img" src="./images/Histories_Screen.png" alt="TallyWho Mockup">
                 </div>
