Fixed Clamp on WELCOME
What's the time in new layout for mobile design but it might look weird so it's possible I'll change it back to just adjusting the horizontal welcome later.

--- a/index.html
+++ b/index.html
@@ -26,16 +26,36 @@
     <!-- WELCOME SECTION -->
     <section class="col-con" id="welcome">
         <div id="init-sugar">
-            <p>/</p>
-            <p>/</p>
-            <p>&ThinSpace;</p>
-            <p>w</p>
-            <p>e</p>
-            <p>l</p>
-            <p>c</p>
-            <p>o</p>
-            <p>m</p>
-            <p>e</p>
+            <div class="horizontal-welcome">
+                <p>/</p>
+                <p>/</p>
+                <p>&ThinSpace;</p>
+                <p>w</p>
+                <p>e</p>
+                <p>l</p>
+                <p>c</p>
+                <p>o</p>
+                <p>m</p>
+                <p>e</p>
+            </div>
+        </div>
+        <div class="vertical-welcome">
+            <div class="vert-group">
+                <p>/</p>
+                <p>/</p>
+                <p>&ThinSpace;</p>
+                <p>w</p>
+            </div>
+            <div class="vert-group">
+                <p>e</p>
+                <p>l</p>
+                <p>c</p>
+            </div>
+            <div class="vert-group">
+                <p>o</p>
+                <p>m</p>
+                <p>e</p>
+            </div>
         </div>
     </section>
     <!-- END WELCOME SECTION -->
